--- a/src/rules.ini
+++ b/src/rules.ini
@@ -43,28 +43,12 @@
 ; -- 
 ; Some actions may have additional items that can be specified
 ; 
-;[ClientHTTPDebugger]
-;addr=192.168.1.1
-;port=80
-;direction=c2s
-;payload=*
-;passthru=True
-;action=Debug
-
-;[ClientHTTPMuck]
-;port=80
-;direction=c2s
-;action=Muck
-;muck_1=EHH//g
-;muck_2=FOO//g
-;muck_3=BAZ//g
-;[FuzzRuleDefault]
-;payload=*
-;passthru=True
-;action=Fuzz
-;direction=s2c
-
-[SimpleMuckTest]
-passthru=True
+[Strip Accept-Encoding headers in incoming requests]
+direction=c2s
 action=Muck
-muck_1=A/B/g
+muck_1=Accept-Encoding:.*\n//
+passthru=True
+
+[Debug all]
+direction=*
+action=Debug
